# goit-pythonweb-hw-06

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  configuration.py  docker-compose.yaml  main.py  pyproject.toml  tempCodeRunnerFile.py
src/: configuration.py  faker_providers.py  instanses.py  models.py  my_select.py  seed.py
src/alembic/versions/: 015142d5aca2_generating_tables.py  1ec500af6b46_.py  9e9061963259_.py  e51bdeaeb475_generating_tables.py
